--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -39,5 +39,23 @@
     <script src="./public/assets/js/todolist.js"></script>
     <script src="./public/assets/js/dashboard.js"></script>
     <script src="./public/assets/js/Chart.roundedBarCharts.js"></script>
+
+    <script src="./public/assets/js/jquery.min.js"></script>
+    <script src="./public/assets/js/popper.min.js"></script>
+    <script src="./public/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./public/assets/js/jquery-3.0.0.min.js"></script>
+    <script src="./public/assets/js/plugin.js"></script>
+      <!-- sidebar -->
+    <script src="./public/assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="./public/assets/js/custom.js"></script>
+    <script>
+         function openNav() {
+           document.getElementById("mySidenav").style.width = "250px";
+         }
+         
+         function closeNav() {
+           document.getElementById("mySidenav").style.width = "0";
+         }
+    </script>
   </body>
 </html>
